--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,33 @@ body {
 h2 {
   @apply text-4xl font-bold mb-1 tracking-wide
 }
+
+button {
+  @apply cursor-pointer
+}
+
+@keyframes pageFlip {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(-180deg);
+  }
+}
+
+@keyframes pageFlipBack {
+  0% {
+    transform: rotateY(180deg);
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+
+.animate-page-flip {
+  animation: pageFlip 0.6s ease-in-out;
+}
+
+.animate-page-flip-back {
+  animation: pageFlipBack 0.6s ease-in-out;
+}
